--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
     <title>Document</title>
   </head>
   <body>
+    <h2>Memory Game</h2>
+    <div id="board"></div>
     <script src="main.js"></script>
   </body>
 </html>
