refactor add card.js file for data and utils.js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <body>
     <h2>Memory Game</h2>
     <div id="board"></div>
+    <script src="cards.js"></script>
+    <script src="utils.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
